--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
              id="bs-example-navbar-collapse-1">
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
+                    <input type="text" class="form-control" placeholder="SimpleCode를 입력.">
                 </div>
-                <button type="submit" class="btn btn-default">Submit</button>
+                <button type="submit" class="btn btn-default">Download</button>
             </form>
             <ul class="nav navbar-nav navbar-right" ng-controller="loginCtrl"
                 ng-init="checkSession();facebookInit()">
@@ -172,7 +172,16 @@
                             ng-show="isFile(x.contents_type)" ng-click="downloadFile(x.contents_id)">다운로드
                     </button>
                 </td>
-
+                <td>
+                    <button type="button" class="btn btn-primary" ng-click="setSimpleCode(x.contents_id, x.contents)"
+                            data-toggle="modal"
+                            data-target="#myModal">SimpleCode 생성
+                    </button>
+                </td>
+                <td>
+                    {{formatSimpleCode(x.contents_simple_code,x.is_passwd)}}<br>
+                    {{formatDeadLine(x.dead_line)}}
+                </td>
             </tr>
         </table>
     </div>
@@ -191,8 +200,63 @@
 
     <button class="btn btn-info" type="button" ng-click="writeMemo()">입력</button>
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div ng-hide="simpleCode.isLoading">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">SimpleCode 생성하기</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>{{simpleCode.contents}}의 다운로드 가능한 심플코드를 생성합니다.</p>
+                        <input type="password" class="form-control" placeholder="비밀번호를 설정해주세요(선택)"
+                               ng-disabled="!simpleCode.isSecure" ng-model="simpleCode.passwd"><label
+                            class="checkbox-inline"><input type="checkbox" ng-model="simpleCode.isSecure">비밀번호를 활성화
+                        합니다.</label>
+                        <br>
+                        <label>
+                            <input type="radio" ng-model="simpleCode.deadLine" value="0" ng-checked="true">
+                            1시간
+                        </label>
+                        <label>
+                            <input type="radio" ng-model="simpleCode.deadLine" value="1">
+                            6시간
+                        </label>
+                        <label>
+                            <input type="radio" ng-model="simpleCode.deadLine" value="2">
+                            12시간
+                        </label>
+                        <label>
+                            <input type="radio" ng-model="simpleCode.deadLine" value="3">
+                            24시간
+                        </label>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" ng-click="makeSimpleCode()">
+                            생성하기
+                        </button>
+                    </div>
+                </div>
+
+                <div ng-show="simpleCode.isLoading" class="sk-cube-grid">
+                    <div class="sk-cube sk-cube1"></div>
+                    <div class="sk-cube sk-cube2"></div>
+                    <div class="sk-cube sk-cube3"></div>
+                    <div class="sk-cube sk-cube4"></div>
+                    <div class="sk-cube sk-cube5"></div>
+                    <div class="sk-cube sk-cube6"></div>
+                    <div class="sk-cube sk-cube7"></div>
+                    <div class="sk-cube sk-cube8"></div>
+                    <div class="sk-cube sk-cube9"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
+
 
 </body>
 <script type="text/javascript">
