--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
         rel="stylesheet">
 <body ng-app="SimpleMemo">
-<nav class="navbar navbar-default navbar-inverse" role="navigation">
+<nav class="navbar navbar-default navbar-inverse" role="navigation" ng-controller="loginCtrl">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -45,12 +45,14 @@
              id="bs-example-navbar-collapse-1">
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="SimpleCode를 입력.">
+                    <input type="text" class="form-control" placeholder="SimpleCode를 입력." ng-model='simpleCode.code'>
                 </div>
-                <button type="submit" class="btn btn-default">Download</button>
+                <button type="submit" class="btn btn-default" ng-click="checkSimpleCode()">Download
+                </button>
+                <button type="button" id="simpleDownloadOpenModal" ng-hide="true" data-toggle="modal"
+                        data-target="#simpleDownloadModal"></button>
             </form>
-            <ul class="nav navbar-nav navbar-right" ng-controller="loginCtrl"
-                ng-init="checkSession();facebookInit()">
+            <ul class="nav navbar-nav navbar-right" ng-init="checkSession();facebookInit()">
                 <li ng-hide="login.isLogin"><p class="navbar-text">로그인후 이용해 주세요.</p></li>
                 <li class="dropdown" id="dropdown"><a href="#"
                                                       class="dropdown-toggle" data-toggle="dropdown"
@@ -158,6 +160,29 @@
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
+    <!-- Modal -->
+    <div class="modal fade in" id="simpleDownloadModal" aria-hidden="false" role="dialog">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">SimpleCode 생성하기</h4>
+                </div>
+                <div class="modal-body">
+                    <p>{{simpleCode.code}}를 다운로드 받기 위해 비밀번호가 필요합니다.</p>
+                    <input type="password" class="form-control" placeholder="비밀번호를 입려해 주세요."
+                           ng-model="simpleCode.passwd">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" ng-click="downloadFile()">
+                        다운로드 하기
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </nav>
 <div id="contents" ng-controller="contentsCtrl"
      ng-init="dropzoneInit();" ng-hide="!login.isLogin">
@@ -217,19 +242,19 @@
                         합니다.</label>
                         <br>
                         <label>
-                            <input type="radio" ng-model="simpleCode.deadLine" value="0" ng-checked="true">
+                            <input type="radio" ng-model="simpleCode.dead_line_code" value="0" ng-checked="true">
                             1시간
                         </label>
                         <label>
-                            <input type="radio" ng-model="simpleCode.deadLine" value="1">
+                            <input type="radio" ng-model="simpleCode.dead_line_code" value="1">
                             6시간
                         </label>
                         <label>
-                            <input type="radio" ng-model="simpleCode.deadLine" value="2">
+                            <input type="radio" ng-model="simpleCode.dead_line_code" value="2">
                             12시간
                         </label>
                         <label>
-                            <input type="radio" ng-model="simpleCode.deadLine" value="3">
+                            <input type="radio" ng-model="simpleCode.dead_line_code" value="3">
                             24시간
                         </label>
                     </div>
